--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
 }
 
 body {
-	/* TODO "Change Background" */
-	background-image: url('static/MasarBackground.png');
+    background-image: url(static/gpt-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .welcome-message {
@@ -51,7 +53,7 @@ body {
 	height: 100%;
 }
 
-.chatbot-toggler {
+/* .chatbot-toggler {
 	position: fixed;
 	right: 40px;
 	bottom: 35px;
@@ -67,7 +69,7 @@ body {
 	background: rgb(31, 64, 96);
 	border-radius: 50%;
 	transition: all 0.1s ease;
-}
+} */
 
 .show-chatbot .chatbot-toggler {
 	transform: rotate(90deg);
@@ -87,42 +89,36 @@ body {
 }
 
 .chatbot {
-	position: fixed;
-	align-items: center;
-	justify-content: center;
-	top: 10%;
-	left: 16%;
-	width: 900px;
-	height: 700px;
-	transform: scale(0.5);
-	opacity: 0;
-	pointer-events: none;
-	overflow: hidden;
-	background: rgb(26, 26, 26);
-	border-radius: 15px;
-	box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
-				0 32px 64px -48px rgba(0,0,0,0.5);
-	transition: all 0.1s ease;
+	height: 100vh;
+    width: 100vw;
+    align-items: flex-start;
+    transform: scale(0.5);
+    opacity: 0;
+    pointer-events: none;
+    overflow: hidden;
+    border-radius: 15px;
+    transition: all 0.1s ease;
+    transform: scale(1);
+    opacity: 1;
+    display: flex;
+    pointer-events: auto;
+    justify-content: flex-end;
+	padding: 20px ;
 }
 
-.show-chatbot .chatbot {
-	transform: scale(1);
-	opacity: 1;
-	pointer-events: auto;
-}
 
-.chatbot header {
+/* .chatbot header {
 	background: rgb(31, 64, 96);
 	padding: 16px 0;
 	text-align: center;
 	position: relative;
-}
+} */
 
-.chatbot header h2 {
+/* .chatbot header h2 {
 	color: #fff;
 	font-size: 1.4rem;
-}
-
+} */
+/* 
 .chatbot header span {
 	position: absolute;
 	right: 20px;
@@ -131,12 +127,12 @@ body {
 	cursor: pointer;
 	display: none;
 	transform: translateY(-50%);
-}
+} */
 
 .chatbot .chatbox {
-	height: 510px;
+
 	overflow-y: auto;
-	padding: 30px 20px 100px;
+	padding: 20px 20px;
 }
 
 .chatbox .chat {
@@ -144,18 +140,37 @@ body {
 }
 
 .chatbox .outgoing {
-	margin: 20px 0;
-	justify-content: flex-end;
+    /* margin: 20px 0; */
+    /* justify-content: flex-end; */
+    visibility: hidden;
+    height: 0px;
 }
 
 .chatbox .chat p {
-	color: #fff;
-	max-width: 75%;
-	white-space: pre-wrap;
-	font-size: 0.95rem;
-	padding: 12px 16px;
-	border-radius: 10px 10px 0 10px;
-	background: rgb(13, 13, 13);
+    color: #373737;
+    max-width: 100%;
+    white-space: pre-wrap;
+    font-size: 0.95rem;
+    /* padding: 12px 16px; */
+    /* border-radius: 10px 10px 0 10px; */
+    /* background: rgb(255, 255, 255); */
+}
+.chat-bouble{
+	background: #ffffff;
+
+    display: flex;
+    width: 40%;
+    height: 40%;
+    margin-right: 62px;
+    margin-top: 43px;
+    border-radius: 5rem 5rem 5rem 0;
+    overflow-y: auto;
+    padding: 2rem;
+    justify-content: flex-start;
+    align-items: flex-start;
+    scrollbar-width: none;
+
+
 }
 
 .chatbox .chat p.error {
@@ -164,9 +179,8 @@ body {
 }
 
 .chatbox .incoming p {
-	color: #fff;
+	color: #373737;
 	border-radius: 10px 10px 10px 0;
-	background: rgb(13, 13, 13);
 }
 
 .chatbox .incoming span {
@@ -174,7 +188,6 @@ body {
 	width: 32px;
 	color: #fff;
 	align-self: flex-end;
-	background: rgb(31, 64, 96, 0.9);
 	text-align: center;
 	line-height: 32px;
 	border-radius: 4px;
@@ -182,27 +195,32 @@ body {
 }
 
 .chatbot .chat-input {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	display: flex;
-	gap: 5px;
-	background: rgb(26, 26, 26);
-	padding: 5px 20px;
-	border-top: 1px solid rgb(31, 64, 96);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    background: transparent;
+    padding: 67px 20px;
+    justify-content: center;
 }
 
 .chat-input textarea {
-	height: 55px;
-	width: 100%;
+	height: 61px;
+	width: 75%;
 	border: none;
 	outline: none;
 	max-height: 180px;
 	font-size: 0.95rem;
 	resize: none;
-	padding:  16px 15px 16px 0;
-	background: rgb(26, 26, 26);
+	padding:  16px;
+	background: rgba(213, 213, 213, 0.404);
 	color: #fff;
+	backdrop-filter: blur(5px);
+	border-radius: 5rem;
+}
+textarea::placeholder{
+	color: #ffffff;
 }
 
 .chat-input span {
@@ -230,19 +248,16 @@ body {
 }
 
 @media (min-aspect-ratio: 16/9){
-	.back-video: {
+	.back-video {
 		width: 100%;
 		height: auto;
 	}
 }
 
 @media (max-aspect-ratio: 16/9){
-	.back-video: {
+	.back-video {
 		width: auto;
 		height: 100%;
 	}
-	.chatbot {
-		width: 70%;
-		height: 78%;
-	}
+
 }
